--- a/src/index.css
+++ b/src/index.css
@@ -50,8 +50,8 @@ body {
 /* Chart */
 .chart-container {
   flex: 1;
-  display: flex;
-  flex-direction: column;
+  /*display: flex;*/
+  /*flex-direction: column;*/
   min-height: 400px;
 }
 
