--- a/src/index.css
+++ b/src/index.css
@@ -28,10 +28,16 @@ body {
 }
 
 .app {
-  display: flex;
+  display: grid;
+  grid-template-columns: calc(100% - 321px) 320px;
   gap: 1px;
   background: var(--border);
   min-height: 100vh;
+
+  @media (max-width: 1000px) {
+    grid-template-columns: 100%;
+    grid-template-rows: 600px 300px;
+  }
 }
 
 .main-content {
@@ -50,8 +56,8 @@ body {
 /* Chart */
 .chart-container {
   flex: 1;
-  /*display: flex;*/
-  /*flex-direction: column;*/
+  display: flex;
+  flex-direction: column;
   min-height: 400px;
 }
 
