--- a/src/index.css
+++ b/src/index.css
@@ -216,6 +216,7 @@ body {
   background: var(--bg-tertiary);
   border-radius: 4px;
   padding: 0 12px;
+  width: 100%;
 }
 
 .input-wrapper input {
