--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body {
 
   @media (max-width: 1000px) {
     grid-template-columns: 100%;
-    grid-template-rows: 600px 300px;
+    grid-template-rows: 400px 300px;
   }
 }
 
@@ -75,7 +75,7 @@ body {
 .chart-placeholder {
   flex: 1;
   display: flex;
-  align-items: center;
+  /*align-items: center;*/
   justify-content: center;
   color: var(--text-secondary);
   background: var(--bg-primary);
